--- a/index.html
+++ b/index.html
@@ -7,6 +7,16 @@
     <title>HTML Images</title>
   </head>
   <body>
-    <!-- Your code here -->
+
+     <!-- First <img>: has valid src -->
+    <img src="https://i.pinimg.com/736x/83/db/da/83dbdae522f0302f59b18f530e6c0eb8.jpg" />
+
+    <!-- Second <img>: has valid src and alt -->
+     <img src="https://i.pinimg.com/736x/2e/75/9f/2e759fc95433d5d191198f1edc694811.jpg" alt="my lion" />
+
+    <!-- Third <img>: has valid src, alt, and title -->
+     <img src="https://i.pinimg.com/736x/cd/67/ff/cd67fff5193e83d7a6c83794e94e0bf6.jpg" alt="my lion" title="am the king of the jungle" />
+
   </body>
 </html>
+
